Corrected cross icon spacing

--- a/style.css
+++ b/style.css
@@ -144,6 +144,6 @@ p::first-letter {
     width: 1.9rem;
   }
   .todo__delete {
-    margin-right: 1.5rem;
+    margin-right: 2rem;
   }
 }
